# netmcp

./: README.md  pyproject.toml  server.py
docs/: DOCS_HUB.md
docs/delivery/: IMPLEMENTATION_BACKLOG.md
docs/delivery/ISSUE_DRAFTS/: README.md  VNX-001_Add_run_evidence_telemetry_envelope.md  VNX-010_Introduce_EvidenceRecord_model.md  VNX-050_Implement_safety_supervisor_core.md
docs/ops/: OPERATIONS_RUNBOOK.md  TROUBLESHOOTING_FLOW.md
docs/strategy/: TECHNICAL_OVERVIEW.md  VNEXT_BREAKTHROUGH_BLUEPRINT.md
docs/visuals/: EXEC_SUMMARY_VISUAL.md  PRESENTATION_MODE_DECK.md  TECHNICAL_VISUAL_MAP.md
netmcp/: server.py
