[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netmcp"
version = "0.1.0"
description = "Multi-vendor network engineering MCP server — Cisco, F5, Check Point, Juniper, Arista via Claude"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "0xFATPKT", email = "rtsegovia18@gmail.com" }
]
keywords = ["mcp", "network", "automation", "cisco", "netmiko", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "netmiko>=4.3.0",
    "ntc-templates>=3.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
netmcp = "netmcp.server:main"

[project.urls]
Homepage = "https://github.com/0xFATPKT/netmcp"
Repository = "https://github.com/0xFATPKT/netmcp"
Issues = "https://github.com/0xFATPKT/netmcp"

[tool.hatch.build.targets.wheel]
packages = ["netmcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
